<resources>
    <string name="app_name">이거봐봐</string>

    <string name="text_sign_up">회원가입</string>
    <string name="text_sign_in">로그인</string>
    <string name="text_id">아이디</string>
    <string name="text_pw">비밀번호</string>
    <string name="text_pw_recheck">비밀번호 확인</string>
    <string name="text_already_exist_id">이미 존재하는 아이디야ㅠ_ㅠ</string>
    <string name="text_wrong_id_or_pw">아이디 혹은 비밀번호가 틀렸어ㅠ_ㅠ</string>
    <string name="text_not_same_password">비밀번호가 일치하지 않아ㅠ_ㅠ</string>
    <string name="text_success_register_link">등록에 성공했어!</string>
    <string name="text_fail_register_link">등록에 실패했어ㅠ_ㅠ</string>
    <string name="text_fail_open_url">열 수 없는 링크야ㅠ_ㅠ</string>
    <string name="text_alarm_setting">알림 받을 시간을 골라줘</string>
    <string name="text_alarm_get_every_time">새 글이 올라올 때 마다 받을래</string>
    <string name="text_alarm_get_11_AM">11:00AM에 한번만 받을래</string>
    <string name="text_alarm_get_15_PM">15:00PM에 한번만 받을래</string>
    <string name="text_alarm_get_20_PM">20:00PM에 한번만 받을래</string>
    <string name="text_off">OFF</string>
    <string name="text_on">ON</string>
    <string name="text_pm">PM</string>
    <string name="text_am">AM</string>
    <string name="text_default_alarm_time">9:00PM</string>
    <string name="text_link">링크</string>
    <string name="text_memo">메모</string>
    <string name="text_register">등록하기</string>
    <string name="text_ok">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_link_register">링크등록</string>
    <string name="text_max_memo_size">/100</string>
    <string name="text_alarm_setting_appbar">알림설정</string>
    <string name="text_manage_bookmark">북마크 관리</string>
    <string name="text_show_all">모두 보기</string>
    <string name="text_empty">볼게 없오..</string>
    <string name="text_loading">로딩중...</string>
    <string name="text_empty_memo">메모가 없오</string>
    <string name="text_initial_description_size">0/100</string>
    <string name="text_paste">붙여넣기</string>
    <string name="text_normal_error">잠시 후 다시 시도해줘ㅠ_ㅠ</string>


    <string name="content_description_hello">유저를 환영하는 그림</string>
    <string name="content_description_error">에러를 나타내는 그림</string>
    <string name="content_description_alarm_setting">알림 세팅 페이지의 그림</string>
    <string name="content_description_main_image">메인 이미지의 그림</string>
    <string name="content_description_like">링크를 좋아요 눌렀는지 나타내는 그림</string>
    <string name="content_description_empty">링크가 하나도 없을 때 나타나는 그림</string>
    <string name="content_description_loading">로딩 시 나타나는 그림</string>
    <string name="content_description_splash">스플래시 그림</string>
</resources>