<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_splash"
        android:src="@drawable/splash" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/AppButtonLargeStyle"
        android:layout_marginTop="35dp"
        android:text="@string/text_sign_up" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        style="@style/AppButtonLargeStyle"
        android:layout_marginTop="35dp"
        android:text="@string/text_sign_in" />

</androidx.appcompat.widget.LinearLayoutCompat>