<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/iv_alarm_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:contentDescription="@string/text_register"
            android:src="@drawable/alarm_setting"
            app:layout_constraintBottom_toTopOf="@id/tv_alarm_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_alarm_setting"
            style="@style/Text.Bold.28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_alarm_setting"
            app:layout_constraintBottom_toTopOf="@id/tv_switch_every_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_alarm_setting" />

        <TextView
            android:id="@+id/tv_switch_every_time"
            style="@style/Text.Bold.22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:text="@string/text_alarm_get_every_time"
            app:layout_constraintEnd_toStartOf="@id/switch_every_time"
            app:layout_constraintTop_toBottomOf="@id/tv_alarm_setting"
            app:layout_goneMarginTop="111dp" />

        <include
            android:id="@+id/switch_every_time"
            layout="@layout/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_switch_every_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_switch_every_time" />

        <TextView
            android:id="@+id/tv_switch_only_once"
            style="@style/Text.Bold.22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="17dp"
            android:text="@string/text_alarm_get_only_once"
            app:layout_constraintEnd_toStartOf="@id/switch_only_once"
            app:layout_constraintTop_toBottomOf="@id/tv_switch_every_time"
            app:layout_goneMarginTop="31dp" />

        <include
            android:id="@+id/switch_only_once"
            layout="@layout/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_switch_only_once"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_switch_only_once" />

        <TextView
            android:id="@+id/tv_time_only_once"
            style="@style/Text.Normal.16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:textColor="@color/grey_dark"
            app:layout_constraintEnd_toEndOf="@id/switch_only_once"
            app:layout_constraintStart_toStartOf="@id/switch_only_once"
            app:layout_constraintTop_toBottomOf="@id/switch_only_once"
            android:text="@string/text_default_alarm_time" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginBottom="16dp"
            android:id="@+id/btn_ok"
            style="@style/AppButtonLargeStyle"
            android:layout_marginTop="70dp"
            android:text="@string/text_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_time_only_once" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>