<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <ImageView
            android:layout_width="205dp"
            android:layout_height="195dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/contentDescription_hello"
            android:src="@drawable/hello" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="28dp" />

        <TextView
            android:id="@+id/tv_id"
            style="@style/Text.Bold.24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_id" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/et_id"
            style="@style/Text.Normal.20"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_background_radius_8"
            android:inputType="text"
            android:labelFor="@id/tv_id"
            android:paddingStart="13dp"
            tools:text="sampleId" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="19dp" />

        <TextView
            android:id="@+id/tv_pw"
            style="@style/Text.Bold.24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pw" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/et_pw"
            style="@style/Text.Normal.20"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_background_radius_8"
            android:inputType="textPassword"
            android:labelFor="@id/tv_pw"
            android:paddingStart="13dp"
            tools:text="1234" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            style="@style/AppButtonLargeStyle"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:text="@string/text_sign_in" />


    </LinearLayout>
</ScrollView>